# farshore

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: GENERAL.md  RULES.md
lab/: compile_orders.py  gen_stability_boards.py  grade_amendments.py  grade_doctrine.py  live_epoch.py  run_battery.py
lab/batteries/: doctrine.toml  doctrine_arm.toml  doctrine_v2.toml  earlygame.toml  epoch2.toml  grounding_ab.toml  lean_check.toml  lift2.toml  lift3.toml  prodprofile.toml  sampler.toml  sitrep.toml  stability.toml  stability2.toml  trigger_v6.toml
lab/prompts/doctrine/: board_contract.txt  board_contract_v2.txt
lab/prompts/epoch2/: board_grind.txt  board_lift.txt  board_lift_uni.txt  board_lift_uni_clar.txt  board_lift_why.txt  board_loss.txt  primer_b.txt
lab/prompts/grounding/: board_a.txt  board_b.txt  board_base.txt  primer_base.txt
lab/prompts/sitrep/: board_regions.txt
lab/prompts/stability/: board_A1.txt  board_A2.txt  board_A3.txt  board_B1.txt  board_B2.txt  board_C1.txt  board_C2.txt  board_START.txt  primer_c.txt  primer_d.txt
lab/transcripts/doctrine/: NOTHINK-s1.json  NOTHINK-s1.md  NOTHINK-s2.json  NOTHINK-s2.md  NOTHINK-s3.json  NOTHINK-s3.md  THINK-s1.json  THINK-s1.md  THINK-s2.json  THINK-s2.md  THINK-s3.json  THINK-s3.md
lab/transcripts/doctrine-arm/: A1-s1.json  A1-s1.md  A1-s2.json  A1-s2.md  A1-s3.json  A1-s3.md  A2-s1.json  A2-s1.md  A2-s2.json  A2-s2.md  A2-s3.json  A2-s3.md  A3-s1.json  A3-s1.md  A3-s2.json  A3-s2.md  A3-s3.json  A3-s3.md  B1-s1.json  B1-s1.md  B1-s2.json  B1-s2.md  B1-s3.json  B1-s3.md  B2-s1.json  B2-s1.md  B2-s2.json  B2-s2.md  B2-s3.json  B2-s3.md  C1-s1.json  C1-s1.md  C1-s2.json  C1-s2.md  C1-s3.json  C1-s3.md  C2-s1.json  C2-s1.md  C2-s2.json  C2-s2.md  (+2 more)
lab/transcripts/doctrine-v2/: NOTHINK-s1.json  NOTHINK-s1.md  NOTHINK-s2.json  NOTHINK-s2.md  NOTHINK-s3.json  NOTHINK-s3.md  THINK-s1.json  THINK-s1.md  THINK-s2.json  THINK-s2.md  THINK-s3.json  THINK-s3.md
lab/transcripts/earlygame/: START-s1.json  START-s1.md  START-s2.json  START-s2.md  START-s3.json  START-s3.md
lab/transcripts/epoch2/: GRIND-s1.json  GRIND-s1.md  GRIND-s2.json  GRIND-s2.md  GRIND-s3.json  GRIND-s3.md  LIFT-s1.json  LIFT-s1.md  LIFT-s2.json  LIFT-s2.md  LIFT-s3.json  LIFT-s3.md  LOSS-s1.json  LOSS-s1.md  LOSS-s2.json  LOSS-s2.md  LOSS-s3.json  LOSS-s3.md
lab/transcripts/grounding-ab/: A-s1.json  A-s1.md  A-s2.json  A-s2.md  A-s3.json  A-s3.md  B-s1.json  B-s1.md  B-s2.json  B-s2.md  B-s3.json  B-s3.md  BASE-s1.json  BASE-s1.md  BASE-s2.json  BASE-s2.md  BASE-s3.json  BASE-s3.md
lab/transcripts/lean-check/: A1-s1.json  A1-s1.md  A1-s2.json  A1-s2.md  A1-s3.json  A1-s3.md  A2-s1.json  A2-s1.md  A2-s2.json  A2-s2.md  A2-s3.json  A2-s3.md  A3-s1.json  A3-s1.md  A3-s2.json  A3-s2.md  A3-s3.json  A3-s3.md  B1-s1.json  B1-s1.md  B1-s2.json  B1-s2.md  B1-s3.json  B1-s3.md  B2-s1.json  B2-s1.md  B2-s2.json  B2-s2.md  B2-s3.json  B2-s3.md  C1-s1.json  C1-s1.md  C1-s2.json  C1-s2.md  C1-s3.json  C1-s3.md  C2-s1.json  C2-s1.md  C2-s2.json  C2-s2.md  (+2 more)
lab/transcripts/lift2/: WHY-OLD-s1.json  WHY-OLD-s1.md  WHY-OLD-s2.json  WHY-OLD-s2.md  WHY-OLD-s3.json  WHY-OLD-s3.md  WHY-UNI-s1.json  WHY-UNI-s1.md  WHY-UNI-s2.json  WHY-UNI-s2.md  WHY-UNI-s3.json  WHY-UNI-s3.md
lab/transcripts/lift3/: SEALIFT-s1.json  SEALIFT-s1.md  SEALIFT-s2.json  SEALIFT-s2.md  SEALIFT-s3.json  SEALIFT-s3.md
lab/transcripts/prodprofile/: PROD-s1.json  PROD-s1.md  PROD-s2.json  PROD-s2.md  PROD-s3.json  PROD-s3.md
lab/transcripts/sampler/: CLAR-s1.json  CLAR-s1.md  CLAR-s2.json  CLAR-s2.md  CLAR-s3.json  CLAR-s3.md  TEMP06-s1.json  TEMP06-s1.md  TEMP06-s2.json  TEMP06-s2.md  TEMP06-s3.json  TEMP06-s3.md
lab/transcripts/sitrep/: REGIONS-s1.json  REGIONS-s1.md  REGIONS-s2.json  REGIONS-s2.md  REGIONS-s3.json  REGIONS-s3.md
lab/transcripts/stability/: A1-s1.json  A1-s1.md  A1-s2.json  A1-s2.md  A1-s3.json  A1-s3.md  A2-s1.json  A2-s1.md  A2-s2.json  A2-s2.md  A2-s3.json  A2-s3.md  A3-s1.json  A3-s1.md  A3-s2.json  A3-s2.md  A3-s3.json  A3-s3.md  B1-s1.json  B1-s1.md  B1-s2.json  B1-s2.md  B1-s3.json  B1-s3.md  B2-s1.json  B2-s1.md  B2-s2.json  B2-s2.md  B2-s3.json  B2-s3.md  C1-s1.json  C1-s1.md  C1-s2.json  C1-s2.md  C1-s3.json  C1-s3.md  C2-s1.json  C2-s1.md  C2-s2.json  C2-s2.md  (+2 more)
lab/transcripts/stability2/: A1-s1.json  A1-s1.md  A1-s2.json  A1-s2.md  A1-s3.json  A1-s3.md  A2-s1.json  A2-s1.md  A2-s2.json  A2-s2.md  A2-s3.json  A2-s3.md  A3-s1.json  A3-s1.md  A3-s2.json  A3-s2.md  A3-s3.json  A3-s3.md  B1-s1.json  B1-s1.md  B1-s2.json  B1-s2.md  B1-s3.json  B1-s3.md  B2-s1.json  B2-s1.md  B2-s2.json  B2-s2.md  B2-s3.json  B2-s3.md  C1-s1.json  C1-s1.md  C1-s2.json  C1-s2.md  C1-s3.json  C1-s3.md  C2-s1.json  C2-s1.md  C2-s2.json  C2-s2.md  (+2 more)
lab/transcripts/trigger-v6/: A2-s1.json  A2-s1.md  A2-s2.json  A2-s2.md  A2-s3.json  A2-s3.md  B1-s1.json  B1-s1.md  B1-s2.json  B1-s2.md  B1-s3.json  B1-s3.md  B2-s1.json  B2-s1.md  B2-s2.json  B2-s2.md  B2-s3.json  B2-s3.md
packaging/: build_binary.sh  install.sh
planning/: 00-project-notes.md  01-classic-rules-reference.md  01-game-rules-spec.md  02-design-decisions.md  03-ai-design.md  04-class-hierarchy.md  05-implementation-plan.md  06-aggression-bias.md  07-portfolio-director.md  08-llm-general.md  README.md  playtest-todo.md
planning/validation/: phase10-baseline-50games.txt
scripts/: export_release.sh
src/empire/: __main__.py  _aggr_ab.py  _amphib_probe.py  _arena.py  _bias_check.py  _econ_trace.py  _eval_curves.py  _fm_bench.py  _naval_arena.py  _telemetry.py  _validation.py  cli.py  config.py  setup.py
src/empire/ai/: vision.py
src/empire/combat/: evaluator.py  resolver.py
src/empire/contracts/: controller.py  doctrine.py  surprise.py  turn_plan.py  world_view.py
src/empire/core/: city.py  coord.py  engine.py  event_bus.py  events.py  game.py  identity.py  map.py  player.py  reporting.py  ruleset.py  standing_order.py  tile.py  unit.py
tests/: conftest.py
tests/empire/: support.py  test_cli.py  test_config.py  test_naval_arena.py  test_setup.py  test_smoke.py
(+173 files in other folders)
