[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "empire"
version = "0.0.0"
description = "TUI reimplementation of Walter Bright's Empire: Wargame of the Century"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Empire Project" }]
dependencies = [
    "textual>=0.80",
]

[project.optional-dependencies]
llm-hosted = [
    "anthropic>=0.40",
]
llm-local = [
    # llama-cpp-python is heavy; opt-in only
    "llama-cpp-python>=0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "pyright>=1.1.380",
    "import-linter>=2.0",
]

[project.scripts]
empire = "empire.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/empire"]

# -----------------------------------------------------------------------------
# Ruff: lint + format
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "A",             # builtins shadowing
    "C4",            # comprehensions
    "PIE",           # misc
    "SIM",           # simplify
    "RET",           # returns
    "PLE",           # pylint errors
    "PLW",           # pylint warnings
    "RUF",           # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow asserts in tests

# -----------------------------------------------------------------------------
# Pyright: strict on domain layers, basic on TUI
# -----------------------------------------------------------------------------
[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"

[[tool.pyright.executionEnvironments]]
root = "src/empire/tui"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"

# Tests use pytest features (approx, monkeypatch, etc.) whose type stubs
# leave many parameters as Unknown. Relax those specific warnings here;
# we still want full strict typing on the production code in src/.
[[tool.pyright.executionEnvironments]]
root = "tests"
# Tests import shared scenario builders via the top-level `tests` package
# (e.g. `from tests.empire... import ...`); pytest puts the project root on
# sys.path at runtime, so mirror that for pyright's import resolution.
extraPaths = ["."]
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
]

# -----------------------------------------------------------------------------
# Coverage
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/empire"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# -----------------------------------------------------------------------------
# Import-linter: enforces the dependency matrix from planning/04 §10
# -----------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["empire"]

[[tool.importlinter.contracts]]
name = "core depends on nothing in the project"
type = "forbidden"
source_modules = ["empire.core"]
forbidden_modules = [
    "empire.contracts",
    "empire.combat",
    "empire.mapgen",
    "empire.pathfinding",
    "empire.events",
    "empire.persistence",
    "empire.ai",
    "empire.tui",
]
# Game holds AIController references and constructs WorldView objects to
# hand to controllers, but uses them only as opaque values at runtime;
# the type annotations are TYPE_CHECKING-only and the runtime imports
# are kept function-local. These do not represent core depending on
# contracts in any architectural sense.
ignore_imports = [
    "empire.core.game -> empire.contracts.controller",
    "empire.core.game -> empire.contracts.world_view",
]

[[tool.importlinter.contracts]]
name = "contracts depends only on core"
type = "forbidden"
source_modules = ["empire.contracts"]
forbidden_modules = [
    "empire.combat",
    "empire.mapgen",
    "empire.pathfinding",
    "empire.events",
    "empire.persistence",
    "empire.ai",
    "empire.tui",
]

[[tool.importlinter.contracts]]
name = "combat depends only on core"
type = "forbidden"
source_modules = ["empire.combat"]
forbidden_modules = [
    "empire.contracts",
    "empire.mapgen",
    "empire.pathfinding",
    "empire.events",
    "empire.persistence",
    "empire.ai",
    "empire.tui",
]

[[tool.importlinter.contracts]]
name = "mapgen depends only on core"
type = "forbidden"
source_modules = ["empire.mapgen"]
forbidden_modules = [
    "empire.contracts",
    "empire.combat",
    "empire.pathfinding",
    "empire.events",
    "empire.persistence",
    "empire.ai",
    "empire.tui",
]

[[tool.importlinter.contracts]]
name = "pathfinding depends only on core"
type = "forbidden"
source_modules = ["empire.pathfinding"]
forbidden_modules = [
    "empire.contracts",
    "empire.combat",
    "empire.mapgen",
    "empire.events",
    "empire.persistence",
    "empire.ai",
    "empire.tui",
]

[[tool.importlinter.contracts]]
name = "events depends only on core"
type = "forbidden"
source_modules = ["empire.events"]
forbidden_modules = [
    "empire.contracts",
    "empire.combat",
    "empire.mapgen",
    "empire.pathfinding",
    "empire.persistence",
    "empire.ai",
    "empire.tui",
]

[[tool.importlinter.contracts]]
name = "ai depends on core, contracts, combat, pathfinding only"
type = "forbidden"
source_modules = ["empire.ai"]
forbidden_modules = [
    "empire.mapgen",
    "empire.events",
    "empire.persistence",
    "empire.tui",
]
# SearchAI's forward model (Phase 15.8) clones games via the schema-v1
# serializer round-trip — a read-only use of the save format, not a layering
# inversion. Confined to this single edge.
ignore_imports = [
    "empire.ai.search.playout -> empire.persistence.schema_v1",
]

[[tool.importlinter.contracts]]
name = "tui may not import the dev-only validation harness"
type = "forbidden"
source_modules = ["empire.tui"]
forbidden_modules = [
    "empire._validation",
]
# The TUI's dependency surface widened with the launcher screen: it builds
# games itself (empire.setup / empire._arena for the land-brawl mode), which
# transitively reaches mapgen and combat — so those can no longer be
# forbidden, same as pathfinding (always reached transitively via AI).
# Persistence is allowed directly for the Save/Load hotkeys and the
# launcher's restore flow. What remains forbidden is the dev-only
# validation harness, which has no business in the shipped UI.
